<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addPlace"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_showMap"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_editPlace"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_deletePlace"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_open"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_openPlace"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_login"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_login"
            app:showAsAction="always" />
        <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_lock_open"
            android:title="@string/menu_logout"
            app:showAsAction="always" />
    </group>

</menu>