<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".travelplace.PlaceView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="?attr/colorOnPrimary" />

            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/travelPlaceDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_margin="8dp"
                        android:text="Select date"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="8dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/travelPlaceTitle"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/hint_placeTitle"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/travelPlaceDescription"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/hint_placeDescription"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp">

                        <Button
                            android:id="@+id/chooseImage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:text="@string/button_addImage"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/placeLocation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="8dp"
                            android:padding="8dp"
                            android:text="@string/button_location"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/travelPlaceImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="8dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@mipmap/ic_launcher" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>